gcc/testsuite/rust/rustc/ui/suggestions/dont-suggest-try_into-in-macros.rs
fn main() {
    assert_eq!(10u64, 10usize); // { dg-error ".E0308." "" { target *-*-* } }
}

